--- a/src/styles.scss
+++ b/src/styles.scss
@@ -301,12 +301,74 @@ strong{
                                         &.active{
                                             color: $color-red;
                                             border-bottom: 1px solid $color-red;
+                                            @media screen and (max-width: 760px) {
+                                                border-bottom: 2px solid $color-red;
+                                            }
                                         }
 
                                         &::first-letter{
                                             text-transform: uppercase;
                                         }
+
+                                        @media screen and (max-width: 760px) {
+                                            border-top: 1px solid #f5f5f5;
+                                            border-bottom: 1px solid #f5f5f5;
+                                            min-height: 55px;
+                                            position: relative;
+                                            &:after{
+                                                content: '+';
+                                                position: absolute;
+                                                right: 15px;
+                                                font-size: 20px;
+                                                top: calc(50% - 12px);
+                                                color: #d3d3d3;  
+                                            }
+
+                                            &.active:after{
+                                                content: '-';
+                                                position: absolute;
+                                                right: 15px;
+                                                font-size: 30px; 
+                                                top: calc(50% - 17px);
+                                                color: #d3d3d3;
+                                            }
+                                        }
                                     }
+
+                                    ul{
+                                        display: flex;
+                                        flex-wrap: wrap;
+                                        flex-direction: column;
+                                        flex-grow: 2;
+                                        padding: 15px 25px;
+                                        margin-left: 20px;
+                                        background: #f5f5f5;
+                                        max-height: 800px;
+                                        padding-left: 20px !important;
+                                        overflow: hidden;
+                                        overflow-x: auto;
+                                        text-align: left;
+                                        li{
+                                            line-height: 35px;
+                                            font-size: 15px;
+                                            font-weight: 400;
+                                            margin-right: 40px;
+                                            &::before{
+                                                content: "•";
+                                                font-size: 20px;
+                                                color: $color-red;
+                                                margin-right: 8px;
+                                            }
+                                        }
+
+                                        @media screen and (max-width: 760px) {
+                                            margin-left: 0;
+                                        }
+                                    }
+                                }
+
+                                @media screen and (max-width: 760px) {
+                                    background: #fff;
                                 }
                             }
 
@@ -365,6 +427,7 @@ strong{
                                 grid-template-rows: .5fr 1fr;
                                 grid-template-areas: "sideBar"
                                                      "centerBox";
+                                border: none;
                             }
                         }
                     }
