--- a/src/styles.scss
+++ b/src/styles.scss
@@ -176,7 +176,7 @@ strong{
                                 position: absolute;
                                 width: 70vw;
                                 left: calc(50% - 35vw);
-                                top: 10%;
+                                top: 150px;
                                 height: auto;
                                 cursor: zoom-out;
                                 @media screen and (max-width: 760px) {
@@ -194,7 +194,7 @@ strong{
                         &__hideBox{
                             &.zoomBox{
                                 position: fixed;
-                                top: 0;
+                                top: 65px;
                                 left: 0;
                                 width: 100%;
                                 height: 100vh;
