Nuevas Tiendas y Cobertura Ajuste Estilos Mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,7 +160,9 @@ strong{
 
                         @media screen and (max-width: 760px) {
                             margin-right: 0px;
-                            height: 100px;
+                            height: 250px;
+                            margin-bottom: 30px;
+
                         }
                     }
     
